--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -22,4 +22,13 @@ section {
         border-radius: 50%;
         background-color: white;
     }
+    & button {
+        padding: 8px 16px;
+        border: none;
+        background-color: rgb(255, 255, 255);
+        color: rgb(11, 12, 12);
+        font-weight: bold;
+        border-radius: 8px;
+        cursor: pointer;  
+    }
 }
